Kubernetes/productAPI/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: product
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: product
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/testmicroservice-main: "true"
        io.kompose.service: product
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              valueFrom:
                configMapKeyRef:
                  key: ASPNETCORE_ENVIRONMENT
                  name: productapi
            - name: DatabaseSettings:ConnectionString
              value: mongodb://productdb:27017
          image: product
          name: product
          ports:
            - containerPort: 8080
              hostPort: 8000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
