Kubernetes/productAPI/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: product
  name: product
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8080
  selector:
    io.kompose.service: product
status:
  loadBalancer: {}
