Kubernetes/productAPI/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productAPI
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/Product/
            pathType: Prefix
            backend:
              service:
                name: productAPI
                port:
                  number: 8000
